--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100%;
+  height: 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.container > .first-column {
+  width: 200px;
+  height: 100%;
+  padding: 20px;
+}
+.container > .second-column {
+  width: 100%;
+  height: 100%;
+  min-width: 100px;
+  padding: 20px;
+}
+.container > .third-column {
+  width: 300px;
+  height: 100%;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.border {
+  border: 1px solid black;
+}
+
+@media (max-width: 600px) {
+  .container {
+    flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+  .first-column,
+  .second-column,
+  .third-column {
+    width: 100% !important;
   }
 }
